<resources>
    <string name="app_name">Audidroid</string>
    <string name="nav_header_title">Audidroid</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_edited_rec">Save</string>
    <string name="action_edit_rec">Edit</string>
    <string name="menu_record">Record</string>
    <string name="menu_files">Files</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_img_desc">Splash Logo</string>
    <string-array name="onboarding_titles">
        <item>Recording</item>
        <item>Saving Files</item>
        <item>Organization</item>
        <item>Editing</item>
        <item>Settings</item>
    </string-array>
    <string-array name="onboarding_descriptions">
        <item>Start, pause and resume recordings. Highlight specific positions in recordings with customizable markers.</item>
        <item>Choose an individual name and storage location. Attach up to three customizable labels for organizing.</item>
        <item>Sort, filter and share your recordings or organize them by creating folders and subfolders.</item>
        <item>Cut out unneeded parts. Add, delete and attach comments to marks.</item>
        <item>Customize labels, markers and default values. Enable rotation so the microphone is facing the interviewee.</item>
    </string-array>
    <string name="preference_labels_marks_key">labels_and_marks_category</string>
    <string name="preference_labels_marks_title">Labels and Marks</string>
    <string name="preference_file_key">file_category</string>
    <string name="preference_file_title">File Organisation</string>
    <string name="preference_display_key">display_category</string>
    <string name="preference_display_title">Display</string>
    <string name="labels_preference_key">labels_preference</string>
    <string name="labels_preference_title">Edit labels</string>
    <string name="markers_preference_key">markers_preference</string>
    <string name="markers_preference_title">Edit markers</string>
    <string name="filename_preference_key">filename_preference</string>
    <string name="filename_preference_title">Set default filename</string>
    <string name="filename_preference_dialog_message">
        Available variables:\n
        {date} - inserts current data\n
        {time} - inserts current timestamp
    </string>
    <string name="filename_preference_default_value">rec_{date}_{time}</string>
    <string name="storage_preference_key">storage_preference</string>
    <string name="storage_preference_title">Set default save location</string>
    <string name="storage_location_summary">internal</string>
    <string name="theme_preference_key">theme_preference</string>
    <string name="theme_preference_title">Choose theme</string>
    <string name="rotate_preference_key">rotate_preference</string>
    <string name="rotate_preference_title">Upside-down view is enabled to improve recording quality</string>
    <string name="rotate_preference_summary">\'Auto-rotate\' has to be activated in the settings of the device</string>
    <string name="onboarding_preference_key">onboarding_preference</string>
    <string name="record_label">Record</string>
    <string name="files_label">Files</string>
    <string name="settings_label">Settings</string>
    <string name="player_label">Player</string>
    <string name="edit_label">Edit</string>
    <string name="labels_label">Labels</string>
    <string name="markers_label">Markers</string>
    <string name="play_button">Play recording</string>
    <string name="pause_button">Pause recording</string>
    <string name="labels_text_view">labels</string>
    <string name="error_message_initialization_failed">Initialization of MediaPlayer failed</string>
    <string name="error_message_path">File moved or deleted</string>
    <string name="player_moved_forward">5 sec skipped</string>
    <string name="player_moved_backward">5 sec returned</string>
    <string name="recording_file_name">Recording</string>
    <string name="popup_menu_button">Popup Menu</string>
    <string name="popup_menu_option_rename">Rename</string>
    <string name="popup_menu_option_edit">Edit</string>
    <string name="popup_menu_option_delete">Delete</string>
    <string name="recording_deleted">Recording \'%1$s\' deleted</string>
    <string name="no_recordings">No recordings saved</string>
    <string name="error_message_file_cannot_be_deleted">File cannot be deleted.</string>
    <string name="error_message_path_does_not_exist">File cannot be deleted. File path does not exist.</string>
    <string name="delete_recording_dialog_header">Delete recording \'%1$s\'?</string>
    <string name="content_description_audio_files">Audio files icon</string>
    <string name="cut_inner_button">Cut inner</string>
    <string name="cut_outer_button">Cut outer</string>
    <string name="marks_text_view">Marks</string>
    <string name="show_markers_button">Hide markers</string>
    <string name="hide_markers_button">Show markers</string>
    <string name="no_marks">No marks saved</string>
    <string name="recording_cut">Recording changed</string>
    <string name="error_message_cut">Cut recording failed</string>
    <string name="sample_comment">Sample comment</string>
    <string name="sample_mark">Mark</string>
    <string name="mark_deleted">Mark deleted</string>
    <string name="cancel_editing">Do you really want to delete all changes?</string>
    <string name="wave_pic">WavePic</string>
    <string name="filename_trimmed_recording">(trimmed)_ </string>
    <string name="confirm_button">Confirm Button</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="record_pause_button">Record and Pause Button</string>
    <string name="mark_button">Mark</string>
    <string name="suffix_temp_file">/temp.aac</string>
    <string name="suffix_audio_file">.aac</string>
    <string name="standard_name_recording">Rec</string>
    <string name="mark_made">Mark saved</string>
    <string name="start_time">00:00</string>
    <string name="no_labels">No labels defined</string>
    <string name="add_label_button_text">Add</string>
    <string name="add_label_text_hint">Enter label</string>
    <string name="label_deleted">Label \'%1$s\' deleted</string>
    <string name="rename_label_dialog_header">Rename Label \'%1$s\'</string>
    <string name="create_label">Create Label</string>
    <string name="update_label">Update Label</string>
    <string name="label_inserted">Label \'%1$s\' created</string>
    <string name="label_updated">Label renamed to \'%1$s\'</string>
    <string name="create_label_dialog_header">Create Label</string>
    <string name="label_name_too_long">Use a name with a maximum of 10 characters</string>
    <string name="delete_label_dialog_header">Delete label \'%1$s\'?</string>
    <string name="dialog_label_invalid_name">The label name should be between one and ten characters long.</string>
    <string name="dialog_label_already_exists">Label already exists</string>
    <string name="no_markers">No markers defined</string>
    <string name="add_marker_button_text">Add</string>
    <string name="add_marker_text_hint">Enter marker</string>
    <string name="marker_deleted">Marker \'%1$s\' deleted</string>
    <string name="rename_marker_dialog_header">Rename Marker \'%1$s\'</string>
    <string name="create_marker">Create Marker</string>
    <string name="update_marker">Update Marker</string>
    <string name="marker_inserted">Marker \'%1$s\' created</string>
    <string name="marker_updated">Marker renamed to \'%1$s\'</string>
    <string name="create_marker_dialog_header">Create Marker</string>
    <string name="marker_name_too_long">Use a name with a maximum of 10 characters</string>
    <string name="marker_name_nonexistent">Enter a valid marker name</string>
    <string name="delete_marker_dialog_header">Delete marker \'%1$s\'?</string>
    <string name="max_markers_created">You cannot create more than 6 markers</string>
    <string name="dialog_marker_already_exists">Marker already exists</string>
    <string name="record_saved">Recording saved</string>
    <string name="record_removed">Recording removed</string>
    <string name="permission_record">Permission to access the microphone is required to record audio.</string>
    <string name="permission_write">Permission to write in the storage is required to save the record messages.</string>
    <string name="permission_read">Permission to read the storage is required to list the record messages.</string>
    <string name="permission_title">Permission required</string>
    <string name="permission_button">OK</string>
    <string name="dialog_save_recording_name">Name</string>
    <string name="dialog_save_recording_name_hint">Enter a name for the recording</string>
    <string name="dialog_save_recording_path">Save location</string>
    <string name="dialog_save_recording_path_hint">Choose a path</string>
    <string name="dialog_save_recording_label">Labels</string>
    <string name="dialog_save_button_text">Save</string>
    <string name="dialog_update_button_text">Update</string>
    <string name="dialog_cancel_button_text">Cancel</string>
    <string name="dialog_invalid_name">Just use letters, numbers and _-{}.</string>
    <string name="dialog_already_exist">Duplication error. Change the name or the path.</string>
    <string name="dialog_name_length">Enter a maximum of thirty characters.</string>
    <string name="dialog_just_three_labels">Select a maximum of three labels.</string>
    <string name="rename_dialog_title">Rename recording</string>
    <string name="rename_dialog_error_already_exist">Duplication error. Choose an other name.</string>
    <string name="error_message_recorder_initialization">Recorder initialization failed. Try to restart the app.</string>
    <string name="error_message_recorder_file">There is a problem with the file location. Try changing the directory in the settings.</string>
    <string name="quit_recording">Do you really want to delete the recording?</string>
    <string name="player_bar_skip_playing">Button skip playing</string>
    <string name="player_bar_return_playing">Button return playing</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="confirm_dialog">Confirm Dialog</string>
    <string name="delete">Delete</string>
    <string name="filename_not_saved">Name not saved; contained special characters</string>
    <string name="default_storage_location">internal</string>
    <string name="error_storage_location">Choose an other location</string>
    <string name="external_sd_card_error">Saving on an external sd card is not possible</string>
    <string name="action_sort_by">Sort</string>
    <string name="popup_menu_sort_name">Name</string>
    <string name="popup_menu_sort_date">Date</string>
    <string name="popup_menu_sort_duration">Duration</string>
    <string name="menu_sort_desc">Descending</string>
    <string name="menu_sort_asc">Ascending</string>
    <string name="menu_search">Search</string>
    <string name="menu_search_hint">Search...</string>
    <string name="menu_filter">Filter</string>
    <string name="dialog_filter_name_hint">Filter by name</string>
    <string name="filter_no_results">No results found. Try broadening your filters.</string>
    <string name="filter_clear">Clear</string>
    <string name="popup_menu_option_share">Share</string>
    <string name="share_recording">Share Recoding</string>
    <string name="audio_format_aac">AAC</string>
    <string name="audio_format_mp3">MP3</string>
    <string name="audio_format_m4a">M4A</string>
    <string name="audio_format_wma">WMA</string>
    <string name="audio_format_wav">WAV</string>
    <string name="audio_format_flac">FLAC</string>
</resources>