<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="@string/preference_labels_marks_key"
        app:title="@string/preference_labels_marks_title">

        <Preference
            app:key="@string/labels_preference_key"
            app:title="@string/labels_preference_title" />

        <Preference
            app:key="@string/markers_preference_key"
            app:title="@string/markers_preference_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/preference_file_key"
        app:title="@string/preference_file_title">

        <EditTextPreference
            app:defaultValue="@string/filename_preference_default_value"
            app:dialogLayout="@layout/filename_dialog"
            app:dialogMessage="@string/filename_preference_dialog_message"
            app:key="@string/filename_preference_key"
            app:negativeButtonText="@string/dialog_cancel_button_text"
            app:positiveButtonText="@string/dialog_save_button_text"
            app:title="@string/filename_preference_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:defaultValue="default"
            app:key="@string/storage_preference_key"
            app:summary="@string/storage_location_summary"
            app:title="@string/storage_preference_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/preference_display_key"
        app:title="@string/preference_display_title">

        <ListPreference
            app:defaultValue="default"
            app:dialogTitle="@string/theme_preference_title"
            app:entries="@array/theme_list_array"
            app:entryValues="@array/theme_entry_array"
            app:key="@string/theme_preference_key"
            app:negativeButtonText="@string/dialog_cancel_button_text"
            app:title="@string/theme_preference_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:key="@string/rotate_preference_key"
            app:title="@string/rotate_preference_title"
            app:summary="@string/rotate_preference_summary"
            app:defaultValue="true">
        </SwitchPreference>

    </PreferenceCategory>
    <PreferenceCategory
        app:key ="theme_category"
        app:title ="Storage">

        <Preference
            app:key = "@string/storage_preference_key"
            app:title="Set Storage Location"
            app:summary="@string/storage_location_summary"
            app:defaultValue="internal"/>

    </PreferenceCategory>
</PreferenceScreen>
