<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:title="@string/popup_menu_option_edit">
        <menu>

            <item
                android:id="@+id/action_rename_recording"
                android:title="@string/popup_menu_option_name"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_edit_recording"
                android:title="@string/recording_file_name"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_share_recording"
        android:title="@string/popup_menu_option_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_recording"
        android:title="@string/popup_menu_option_delete"
        app:showAsAction="never" />

</menu>
