<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort_by"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/popup_menu_sort_name" >
                <menu>
                    <item
                        android:id="@+id/action_sort_name_asc"
                        android:title="@string/menu_sort_asc"
                        android:icon="@drawable/ic_sort_asc" />
                    <item
                        android:id="@+id/action_sort_name_desc"
                        android:title="@string/menu_sort_desc"
                        android:icon="@drawable/ic_sort_desc"/>
                </menu>
            </item>
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/popup_menu_sort_date" >
                <menu>
                    <item
                        android:id="@+id/action_sort_date_asc"
                        android:title="@string/menu_sort_asc"
                        android:icon="@drawable/ic_sort_asc"/>
                    <item
                        android:id="@+id/action_sort_date_desc"
                        android:title="@string/menu_sort_desc"
                        android:icon="@drawable/ic_sort_desc" />
                </menu>
            </item>
            <item
                android:id="@+id/action_sort_duration"
                android:title="@string/popup_menu_sort_duration" >
                <menu>
                    <item
                        android:id="@+id/action_sort_duration_asc"
                        android:title="@string/menu_sort_asc"
                        android:icon="@drawable/ic_sort_asc"/>
                    <item
                        android:id="@+id/action_sort_duration_desc"
                        android:title="@string/menu_sort_desc"
                        android:icon="@drawable/ic_sort_desc" />
                </menu>
            </item>
        </menu>
    </item>

</menu>
