<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/dialog_margin_big"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:id="@+id/dialog_save_recording_textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_save_recording_name"
        android:textAppearance="@style/TextAppearance.AudidroidTheme.Headline6"
        android:textColor="@color/color_on_secondary" />

    <EditText
        android:id="@+id/dialog_save_recording_edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_small"
        android:hint="@string/dialog_save_recording_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AudidroidTheme.Subtitle1" />

    <TextView
        android:id="@+id/dialog_save_recording_textview_path_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_medium"
        android:text="@string/dialog_save_recording_path"
        android:textAppearance="@style/TextAppearance.AudidroidTheme.Headline6"
        android:textColor="@color/color_on_secondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_save_recording_textview_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_margin_small"
            android:hint="@string/dialog_save_recording_path_hint" />

        <ImageButton
            android:id="@+id/dialog_save_recording_path_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_margin_small"
            android:contentDescription="@string/dialog_save_recording_path_hint"/>
    </LinearLayout>

    <ListView
        android:id="@+id/dialog_save_recording_labelslist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
