<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/dialog_margin_big"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingTop="@dimen/dialog_padding"
        android:paddingEnd="@dimen/dialog_padding">

        <TextView
            android:id="@+id/dialog_save_recording_error_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dialog_padding_small"
            android:textAppearance="@style/TextAppearance.AudidroidTheme.Body2"
            android:textColor="@color/color_error"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_save_recording_name"
            android:textAppearance="@style/TextAppearance.AudidroidTheme.Headline6"
            android:textColor="@color/color_on_background" />

        <EditText
            android:id="@+id/dialog_save_recording_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_margin_small"
            android:hint="@string/dialog_save_recording_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AudidroidTheme.Subtitle1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_margin_medium"
            android:text="@string/dialog_save_recording_path"
            android:textAppearance="@style/TextAppearance.AudidroidTheme.Headline6"
            android:textColor="@color/color_on_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_margin_small"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/dialog_save_recording_textview_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/dialog_save_recording_path_hint" />

            <ImageButton
                android:id="@+id/dialog_save_recording_path_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dialog_margin_small"
                android:background="@null"
                android:contentDescription="@string/dialog_save_recording_path_hint"
                android:src="@drawable/ic_folder" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_save_recording_label_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_margin_medium"
                android:text="@string/dialog_save_recording_label"
                android:textAppearance="@style/TextAppearance.AudidroidTheme.Headline6"
                android:textColor="@color/color_on_background" />

            <HorizontalScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/labelChipGroup"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dialog_margin_small"
                    android:textAppearance="@style/TextAppearance.AudidroidTheme.Subtitle1"
                    android:textColor="@color/color_on_surface"
                    app:singleLine="true" />
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
